[metadata]
name = swift
summary = OpenStack Object Storage
description_file =
    README.rst
long_description_content_type = text/x-rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = https://docs.openstack.org/swift/latest/
python_requires = >=3.6
project_urls =
    Documentation = https://docs.openstack.org/swift/latest/
    Bug Tracker = https://bugs.launchpad.net/swift
    Source Code = https://opendev.org/openstack/swift/
    Release Notes = https://opendev.org/openstack/swift/src/branch/master/CHANGELOG
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[pbr]
skip_authors = True
skip_changelog = True
skip_reno = True

[options]
packages =
    swift

[extras]
kms_keymaster =
    oslo.config>=5.2.0 # Apache-2.0
    castellan>=0.13.0 # Apache-2.0

kmip_keymaster =
    pykmip>=0.7.0 # Apache-2.0

keystone =
    keystonemiddleware>=4.17.0

[entry_points]
console_scripts =
    swift-account-audit = swift.cli.account_audit:main
    swift-account-auditor = swift.account.auditor:main
    swift-account-info = swift.cli.info:account_main
    swift-account-reaper = swift.account.reaper:main
    swift-account-replicator = swift.account.replicator:main
    swift-account-server = swift.account.server:main
    swift-config = swift.cli.config:main
    swift-container-auditor = swift.container.auditor:main
    swift-container-deleter = swift.cli.container_deleter:main
    swift-container-info = swift.cli.info:container_main
    swift-container-replicator = swift.container.replicator:main
    swift-container-reconciler = swift.container.reconciler:main
    swift-container-server = swift.container.server:main
    swift-container-sharder = swift.container.sharder:main
    swift-container-sync = swift.container.sync:main
    swift-container-updater = swift.container.updater:main
    swift-dispersion-populate = swift.cli.dispersion_populate:main
    swift-dispersion-report = swift.cli.dispersion_report:main
    swift-drive-audit = swift.cli.drive_audit:main
    swift-form-signature = swift.cli.form_signature:main
    swift-get-nodes = swift.cli.get_nodes:main
    swift-init = swift.common.manager:main
    swift-manage-shard-ranges = swift.cli.manage_shard_ranges:main
    swift-object-auditor = swift.obj.auditor:main
    swift-object-expirer = swift.obj.expirer:main
    swift-object-info = swift.cli.info:obj_main
    swift-object-reconstructor = swift.obj.reconstructor:main
    swift-object-relinker = swift.cli.relinker:main
    swift-object-replicator = swift.obj.replicator:main
    swift-object-server = swift.obj.server:main
    swift-object-updater = swift.obj.updater:main
    swift-oldies = swift.cli.oldies:main
    swift-orphans = swift.cli.orphans:main
    swift-proxy-server = swift.proxy.server:main
    swift-recon = swift.cli.recon:main
    swift-recon-cron = swift.cli.recon_cron:main
    swift-reconciler-enqueue = swift.cli.reconciler_enqueue:main
    swift-reload = swift.cli.reload:main
    swift-ring-builder = swift.cli.ringbuilder:error_handling_main
    swift-ring-builder-analyzer = swift.cli.ring_builder_analyzer:main
    swift-ring-composer = swift.cli.ringcomposer:main

paste.app_factory =
    proxy = swift.proxy.server:app_factory
    object = swift.obj.server:app_factory
    mem_object = swift.obj.mem_server:app_factory
    container = swift.container.server:app_factory
    account = swift.account.server:app_factory

paste.filter_factory =
    healthcheck = swift.common.middleware.healthcheck:filter_factory
    crossdomain = swift.common.middleware.crossdomain:filter_factory
    memcache = swift.common.middleware.memcache:filter_factory
    read_only = swift.common.middleware.read_only:filter_factory
    ratelimit = swift.common.middleware.ratelimit:filter_factory
    backend_ratelimit = swift.common.middleware.backend_ratelimit:filter_factory
    cname_lookup = swift.common.middleware.cname_lookup:filter_factory
    catch_errors = swift.common.middleware.catch_errors:filter_factory
    domain_remap = swift.common.middleware.domain_remap:filter_factory
    staticweb = swift.common.middleware.staticweb:filter_factory
    tempauth = swift.common.middleware.tempauth:filter_factory
    keystoneauth = swift.common.middleware.keystoneauth:filter_factory
    recon = swift.common.middleware.recon:filter_factory
    tempurl = swift.common.middleware.tempurl:filter_factory
    formpost = swift.common.middleware.formpost:filter_factory
    name_check = swift.common.middleware.name_check:filter_factory
    bulk = swift.common.middleware.bulk:filter_factory
    container_quotas = swift.common.middleware.container_quotas:filter_factory
    account_quotas = swift.common.middleware.account_quotas:filter_factory
    proxy_logging = swift.common.middleware.proxy_logging:filter_factory
    dlo = swift.common.middleware.dlo:filter_factory
    slo = swift.common.middleware.slo:filter_factory
    list_endpoints = swift.common.middleware.list_endpoints:filter_factory
    gatekeeper = swift.common.middleware.gatekeeper:filter_factory
    container_sync = swift.common.middleware.container_sync:filter_factory
    xprofile = swift.common.middleware.xprofile:filter_factory
    versioned_writes = swift.common.middleware.versioned_writes:filter_factory
    copy = swift.common.middleware.copy:filter_factory
    keymaster = swift.common.middleware.crypto.keymaster:filter_factory
    encryption = swift.common.middleware.crypto:filter_factory
    kms_keymaster = swift.common.middleware.crypto.kms_keymaster:filter_factory
    kmip_keymaster = swift.common.middleware.crypto.kmip_keymaster:filter_factory
    listing_formats = swift.common.middleware.listing_formats:filter_factory
    symlink = swift.common.middleware.symlink:filter_factory
    s3api = swift.common.middleware.s3api.s3api:filter_factory
    s3token = swift.common.middleware.s3api.s3token:filter_factory
    etag_quoter = swift.common.middleware.etag_quoter:filter_factory

swift.diskfile =
    replication.fs = swift.obj.diskfile:DiskFileManager
    erasure_coding.fs = swift.obj.diskfile:ECDiskFileManager

swift.object_audit_watcher =
    dark_data = swift.obj.watchers.dark_data:DarkDataWatcher

