[metadata]
name = swift3
summary = Swift AmazonS3 API emulation Middleware
description-file =
    README.md
author = OpenStack Foundation
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/swift3
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    swift3

[entry_points]
paste.filter_factory =
    swift3 = swift3.middleware:filter_factory
    s3token = swift3.s3_token_middleware:filter_factory

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
exe = 1
verbosity = 2
detailed-errors = 1
cover-package = swift3
cover-html = true
cover-erase = true
